mobile/mobile.scss
@mixin animate {
  animation-duration: 0.4s;
  // animation-delay: 0.5s;
  animation-timing-function: cubic-bezier(0.26, 0.53, 0.74, 1.48);
  animation-fill-mode: backwards;
  animation-name: animate-pop;
}

.selection-toolbar-visible:after {
  background: linear-gradient(
    to bottom,
    transparent 0,
    rgba(0, 0, 0, 0.3) 100%
  );
  bottom: 0;
  position: fixed;
  width: 100vw;
  height: 10vh;
  animation: animate-fade;
  animation-duration: 0.5s;
}

.quote-button {
  .btn.btn-flat.btn-icon-text.insert-quote,
  .btn.btn-flat.btn-icon-text.quote-edit-label,
  .btn.btn-flat.btn-icon-text.copy-quote,
  .btn.ai-post-helper__trigger {
    @include animate;
    display: flex;
    flex-direction: column;
    background: var(--secondary);
    border: 1px solid var(--primary-low);
    border-radius: 100%;
    align-items: center;
    width: 50px;
    height: 50px;
    box-sizing: border-box;
    justify-content: center;
    gap: 0.25em;

    .d-button-label {
      display: none;
    }

    svg {
      margin: 0;
      height: 1.35em;
      width: 1.35em;
      color: var(--tertiary);
    }
  }

  .ai-post-helper {
    width: auto !important;
  }

  .buttons {
    flex-wrap: nowrap;
    justify-content: space-around;
    width: 100vw;
    flex-direction: row !important;

    *:nth-child(2) {
      animation-delay: 0.2s;
    }
    *:nth-child(3) {
      animation-delay: 0.4s;
    }
    *:nth-child(4) > * {
      animation-delay: 0.6s;
    }
    *:nth-child(5) > * {
      animation-delay: 0.8s;
    }
  }
}

.fk-d-menu:has(.quote-button) {
  width: 100%;
  max-width: 100vw !important;
  bottom: 5vh;
  top: unset !important;
  left: 0 !important;
  transform-origin: none !important;
  position: fixed;
}

.fk-d-menu__inner-content:has(.quote-button) {
  background: transparent;
  border: 0;
  box-shadow: none;
}

/* Fade In */
@keyframes animate-fade {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

/* Pop In */
// .animate.pop {
//   animation-name: animate-pop;
// }
@keyframes animate-pop {
  0% {
    opacity: 0;
    transform: scale(0.5, 0.5);
  }
  100% {
    opacity: 1;
    transform: scale(1, 1);
  }
}

